--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -384,3 +384,9 @@ ol.breadcrumb > li.active {
 .footerInfoB .fa {
     color: #979899; 
 }
+
+@media only screen and (max-device-width: 1024px) {
+    .parallax, .parallaxB, .parallaxC {
+        background-attachment: scroll;
+    }
+}
