Fixed banner margins

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -423,7 +423,7 @@ ol.breadcrumb > li.active {
     }
 
     #bannerSlogan {
-        margin-top: 21.5vh;
+        margin-top: 150px;
         font-size: 4em;
     }
 
